Nearly completed assignment (as specifiedinreadme)

--- a/public/juan.html
+++ b/public/juan.html
@@ -1,4 +1,19 @@
-<h1> Juan's view. </h1>
+<html>
+  
+  
+  <body>
+    <h1>You're using a layout</h1>
+    <p>
+      <h3> I'm a header</h3>
+      <p>Put things in the header</p>
+      <a href='http://www.google.com'>Links to google</a>
+      <a href='http://www.reddit.com'>links to reddit</a>
+      <a href='me.html'>Me</a>
+
+    </p>
+    <hr />
+    <div>
+      <h1> Juan's view. </h1>
 <p> Part of assignment for ruby on rails class by Richard Schneeman </p>
 
 <p> Iterating w/ ruby </p>
@@ -12,3 +27,12 @@
         <li> exam timer</li>
       
     </ul>
+
+    </div>
+    <hr />
+    <div>
+      <h3> I'm a footer</h3>
+      <p>Put things in the footer</p>
+    </div>
+  </body>
+</html>
